--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 script:
   - make lint test
-  - docker build -t JHart87/travGo .
+  - docker build -t jhart87/travgo .
 
 
 deploy:
